# bevy_rl_shooter

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: map.json
crates/bevy_rl/: Cargo.toml
crates/bevy_rl/src/: api.rs  lib.rs  state.rs
examples/: render.rs  render_to_file.rs  render_to_file_2.rs  wolfenstein_hud.rs  wolfenstein_maps.rs
python/: DQN.ipynb  bevy_rl_rest_api.ipynb  dqn_agent.py  env.py  model.py
src/: actions.rs  actors.rs  ai.rs  animations.rs  app_states.rs  assets.rs  control.rs  elden.rs  events.rs  game.rs  gym.rs  hud.rs  level.rs  lib.rs  main.rs  map.rs  map_parser.rs  physics.rs  player.rs  render.rs  rendering.rs  screens.rs
