[package]
edition = "2021"
name = "bevystein"
version = "0.0.1"

[dependencies]
bevy = { version = "0.8.1" }
bevy_mod_raycast = { version = "0.6.0" }
bevy-inspector-egui = "0.13.0"
bevy_rl = { version = "0.8.4" }
# bevy_rl = { path = "../bevy_rl" }
bitflags = "1.3.2"
clap = { version = "4.0.2", features = ["derive"] }
crossbeam-channel = "0.5.6"
heron = { version = "4.0.1", features = ["3d"] }
image = "0.24.1"
names = { version = "0.14.0", default-features = false }
rand = "0.8.5"
serde = "1.0.140"
serde_json = "1.0.82"

[profile.dev]
opt-level = 3
