[package]
edition = "2021"
name = "bevy_rl"
version = "0.0.1"

[dependencies]
bevy = {package = "bevy", git = "https://github.com/bevyengine/bevy.git", rev = "9e450f2"}
bytemuck = "1.8.0"
clap = {version = "3.1.6", features = ["derive"]}
futures = "0.3"
gotham = "0.7.1"
hyper = "0.14.17"
image = "0.24.1"
mime = "0.3.16"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.17.0", features = ["full"]}
wgpu = "0.12.0"
crossbeam = "0.8"
crossbeam-channel = "0.5"

[profile.dev]
opt-level = 3
